feat: implements project edit permission
